Added an instruction to index.html to run the sample using on the fly transpiler

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 
 	<script src="jspm_packages/system.js"></script>
 	<script src="config.js"></script>
+	
+	<!-- Remove this statement if you want to run the on the fly transpiler -->
 	<script src="build.js"></script>
+	
 	<script>
 		System.import("scripts/display.js");
 	</script>
